2005-03-06  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (src/Makefile): Document the steps that need to be done
	when automake is used.
	Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-06  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (config.h.in): Explain the constraints for this file's
	name and location.

2005-03-06  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (config.guess): Update the instructions for fetching
	these files.
	Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-06  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (po/Makevars): Change subsection title.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-06  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (src/Makefile): Adjust example 'dist' target.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-23  Bruno Haible  <bruno@clisp.org>

	* gettext.texi: Put the table of contents at the end in TeX mode,
	otherwise texi2dvi fails.

2005-02-12  Bruno Haible  <bruno@clisp.org>

	* tutorial.html: New file, from Gora Mohanty with modifications:
	Remove the navigation panel. Don't use the -s option.
	* Makefile.am (doc_DATA): Add tutorial.html.
	* Makefile.msvc (install, uninstall): Also tutorial.html.
	* Makefile.vms (install, uninstall): Also tutorial.html.

2005-02-06  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Files under CVS): Explain the role of the
	AM_GNU_GETTEXT_VERSION argument.

2005-02-05  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Release Management): New section.
	Suggested by Karl Berry.

2005-02-04  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Plural forms): Add info about Vietnamese.
	Explanations by Clytie Siddall <clytie@riverland.net.au>.

2005-01-20  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Scheme): Correct information about setlocale.

2005-01-16  Bruno Haible  <bruno@clisp.org>

	Support for Scheme.