@@ -1,3 +1,9 @@
+2005-03-07  Bruno Haible  <bruno@clisp.org>
+
+	* FAQ.html (How do I make use of gettext() in my package?): Add more
+	info.
+	Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>.
+
 2005-03-06  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (src/Makefile): Document the steps that need to be done
